Code Challenge Implementation

--- a/cmd/migration.template
+++ b/cmd/migration.template
@@ -10,13 +10,13 @@ import (
 func init() {
 	migrations = append(migrations, &gormigrate.Migration{
 		ID: "{{.ID}}",
-		Migrate: func(tx *gorm.DB) error {
+		Migrate: func(transaction *gorm.DB) error {
 			fmt.Println("Running migration {{.NAME}}")
 			type Model struct {}
 
 			return tx.AutoMigrate(&Model{})
 		},
-		Rollback: func(tx *gorm.DB) error {
+		Rollback: func(transaction *gorm.DB) error {
 			fmt.Println("Rollback migration {{.NAME}}")
 			type Model struct {}
 
